# medicina110-dev

./: .gitignore  .pre-commit-config.yaml  README.md  donors.json  eslint.config.js  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.ts  vue.config.js
.github/workflows/: check.yml  deploy.yml  dev.yml  production.yml  update.yml
assets/: index-B2uuVf4L.js  index-B7xWmKgW.css  index-BVPagP03.css  index-BxcXsbfC.js  index-CUBaWtsU.css  index-CqovnO4K.js  index-DQJHbHjg.js  index-DShrgsv2.js  index-DcWJ4J-Q.js  index-DjFW0NRh.css  index-DnsNVpZ4.js  index-Duo3xZC2.css  index-ePTWYq8P.css
data/: donors.json
public/: donors.json
src/: App.vue  style.css
src/components/: Background.vue  BackgroundPattern.vue  DonorTable.vue  Hero.vue  HeroPage.vue  Images.vue  ImagesCarousel.vue  ImagesPage.vue  MentiMeter.vue  NavigationMenu.vue  QRCode.vue  SectionIndicator.vue  TablesPage.vue  ThemeToggle.vue  WordCloud.vue
src/services/: data-service.ts  update_donors.py
tests/: test_update_donors.py
