[project]
name = "livro-de-ouro-medicina-ufpb-110"
version = "0.1.0"
description = "Livro de Ouro da Turma de Medicina UFPB 110. Feito por @Yannngn (Yann Nóbrega)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gspread>=6.2.1",
    "gspread-pandas>=3.2.3",
    "oauth2client>=4.1.3",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.0",
]
