[project]
name = "livro-de-ouro-medicina-ufpb-110"
version = "0.1.0"
description = "Livro de Ouro da Turma de Medicina UFPB 110. Feito por @Yannngn (Yann Nóbrega)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gspread>=6.2.1",
    "oauth2client>=4.1.3",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
